# chord_visualisation

./: .coverage  .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
core/: chord_name.py  chord_shapes.py  chords.py  chromatic.py  fretboard.py  major_scale.py  music_scale.py  notes.py  plot_chords.py
src/chord_visualisation/: main.py
src/chord_visualisation/core/: chord_name.py  chord_shapes.py  fretboard.py  notes.py  plot_chords.py
src/chord_visualisation/notebooks/: chords_from_audio.ipynb
src/chord_visualisation/tests/: test_fretboard.py  test_notes.py
