[tool.poetry]
name = "chord-visualisation"
version = "0.1.0"
description = ""
authors = ["Pavel Cherepanskiy"]
license = "MIT"
readme = "README.md"
packages = [{include = "chord_visualisation"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.0"
matplotlib = "^3.7"
numpy = "^1.20"
Pillow = "^9.5.0"
scikit-learn = "^1.2.0"
scipy = "^1.10.1"
attrs = "^22.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
pylint = "^2.17.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
